--- a/.github/workflows/gofmt.yaml
+++ b/.github/workflows/gofmt.yaml
@@ -4,9 +4,10 @@ on:
   pull_request:
     branches: [main]
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
   gofmt:
+    permissions:
+      contents: read
     uses: senzing-factory/build-resources/.github/workflows/gofmt.yaml@v3
